<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ VITacademics
  ~ Copyright (C) 2015  Aneesh Neelam <neelam.aneesh@gmail.com>
  ~ Copyright (C) 2015  Saurabh Joshi <saurabhjoshi94@outlook.com>
  ~ Copyright (C) 2015  Gaurav Agerwala <gauravagerwala@gmail.com>
  ~ Copyright (C) 2015  Karthik Balakrishnan <karthikb351@gmail.com>
  ~ Copyright (C) 2015  Pulkit Juneja <pulkit.16296@gmail.com>
  ~ Copyright (C) 2015  Hemant Jain <hemanham@gmail.com>
  ~ Copyright (C) 2015  Darshan Mehta <darshanmehta17@gmail.com>
  ~
  ~ This file is part of VITacademics.
  ~
  ~ VITacademics is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ VITacademics is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with VITacademics.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_vitacademics_borderless" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textColorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/about_description"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/button_feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_feedback" />

            <Button
                android:id="@+id/contribute"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:text="@string/label_contribute" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
