<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ VITacademics
  ~ Copyright (C) 2015  Aneesh Neelam <neelam.aneesh@gmail.com>
  ~ Copyright (C) 2015  Saurabh Joshi <saurabhjoshi94@outlook.com>
  ~ Copyright (C) 2015  Gaurav Agerwala <gauravagerwala@gmail.com>
  ~ Copyright (C) 2015  Karthik Balakrishnan <karthikb351@gmail.com>
  ~ Copyright (C) 2015  Pulkit Juneja <pulkit.16296@gmail.com>
  ~ Copyright (C) 2015  Hemant Jain <hemanham@gmail.com>
  ~ Copyright (C) 2015  Darshan Mehta <darshanmehta17@gmail.com>
  ~
  ~ This file is part of VITacademics.
  ~
  ~ VITacademics is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ VITacademics is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with VITacademics.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_assessmnet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5sp">

        <TextView
            android:id="@+id/assessment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="@dimen/abc_text_size_large_material"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/assessment_marks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/assessment_title"
            android:layout_alignBottom="@+id/assessment_title"
            android:layout_alignEnd="@+id/progress_bar_marks"
            android:layout_alignRight="@+id/progress_bar_marks"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/label_assessment_marks"
            android:textColor="@color/primary_text_default_material_light"
            android:textSize="@dimen/abc_text_size_large_material" />

        <ProgressBar
            android:id="@+id/progress_bar_marks"
            style="@style/BarraProgreso"
            android:layout_width="match_parent"
            android:layout_height="15sp"
            android:layout_below="@+id/assessment_marks" />

        <TextView
            android:id="@+id/assessment_weightage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar_marks"
            android:text="@string/label_assessment_weightage" />

        <TextView
            android:id="@+id/assessment_contribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/progress_bar_marks"
            android:text="@string/label_assessment_contribution" />
    </RelativeLayout>

</LinearLayout>
