<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ VITacademics
  ~ Copyright (C) 2015  Aneesh Neelam <neelam.aneesh@gmail.com>
  ~ Copyright (C) 2015  Saurabh Joshi <saurabhjoshi94@outlook.com>
  ~ Copyright (C) 2015  Gaurav Agerwala <gauravagerwala@gmail.com>
  ~ Copyright (C) 2015  Karthik Balakrishnan <karthikb351@gmail.com>
  ~ Copyright (C) 2015  Pulkit Juneja <pulkit.16296@gmail.com>
  ~ Copyright (C) 2015  Hemant Jain <hemanham@gmail.com>
  ~ Copyright (C) 2015  Darshan Mehta <darshanmehta17@gmail.com>
  ~
  ~ This file is part of VITacademics.
  ~
  ~ VITacademics is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ VITacademics is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with VITacademics.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">

            <ProgressBar
                android:id="@+id/progress_bar_attendance"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:max="100"
                android:progress="60"
                android:progressDrawable="@drawable/ring_attendance_red" />

            <TextView
                android:id="@+id/attendance_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_course_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <TextView
                android:id="@+id/course_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/course_code"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_interact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_course_details">

            <LinearLayout
                android:id="@+id/layout_minus_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_attend_minus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_class_miss"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/button_miss_minus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_class_miss"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/layout_minus_buttons"
                android:layout_toRightOf="@id/layout_minus_buttons"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_attend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="14dp"
                    android:text="@string/label_class_go"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/txt_miss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/label_class_go"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/layout_texts"
                android:layout_toRightOf="@id/layout_texts"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_attend_plus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_class_attend"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/button_miss_plus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_class_attend"
                    android:textColor="@android:color/white"
                    android:textSize="19sp" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/attendance_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="38dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </RelativeLayout>
</android.support.v7.widget.CardView>
